Fixed z-index of contact form overlay. #33

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -673,6 +673,7 @@ input[type="file"] {
   bottom: 0;
   left: 0;
   display: flex;
+  z-index: 3;
 }
 
 .row-input-name {
